<resources>
    <string name="app_name">D\'EVENT</string>
    <string name="todo">TODO</string>
    <string name="pro_version">Pro Version</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="feedback">Feedback</string>
    <string name="task_list">Task List</string>
    <string name="guests">Guests</string>
    <string name="budget">Budget</string>
    <string name="vendors">Vendors</string>
    <string name="dashboard">Dashboard</string>
    <string name="note">Note :</string>
    <string name="status">Status :</string>
    <string name="date">Date :</string>
    <string name="edit">edit</string>
    <string name="registration_no">Registration No</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="student_name">Student Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="update_button">Update</string>
    <string name="task_name">Task Name : </string>
    <string name="tt">......</string>
    <string name="no_tasks_found_nplease_add_your_tasks">No Tasks Found \nPlease add your Tasks</string>
</resources>
