<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_akun"
        android:icon="@drawable/baseline_more_vert_white_18dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title=" ">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/pro_version"
                app:showAsAction="never" >
            </item>
            <item
                android:id="@+id/action_menu1"
                android:orderInCategory="1"
                android:title="@string/setting" />

            <item
                android:id="@+id/action_menu2"
                android:orderInCategory="2"
                android:title="@string/rate_us" />

            <item
                android:id="@+id/action_menu3"
                android:orderInCategory="3"
                android:title="@string/feedback" />

            <item
                android:id="@+id/action_menu4"
                android:orderInCategory="4"
                android:title="@string/share_with_friends" />

            <item
                android:id="@+id/action_menu5"
                android:orderInCategory="5"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/action_menu6"
                android:orderInCategory="6"
                android:title="@string/terms_of_service" />
        </menu>
    </item>
</menu>
